hphp/hack/test/typecheck/const_attribute/static/abstract/abstract_override_concrete.php.exp
File "abstract_override_concrete.php", line 9, characters 45-46:
Cannot re-declare this property as abstract (Typing[4142])
File "abstract_override_concrete.php", line 5, characters 36-37:
Previously defined here
